# aimet-study

./: .gitignore  README.md
aimet-yolo-ptq-study/: .gitignore  README.md  pyproject.toml  requirements.txt
aimet-yolo-ptq-study/configs/: experiment.yaml  quantization.yaml
aimet-yolo-ptq-study/data/: README.md
aimet-yolo-ptq-study/docker/: Dockerfile.runtime  build_runtime_image.sh  run_aimet_onnx_gpu.sh  verify_aimet.py
aimet-yolo-ptq-study/docs/: decision_log.md  environment.md  native_uv.md
aimet-yolo-ptq-study/models/: README.md
aimet-yolo-ptq-study/reports/: aimet_ptq_study.md  paper_report.md  quick_ptq_results.md  research_roadmap.md
aimet-yolo-ptq-study/results/: README.md
aimet-yolo-ptq-study/scripts/: 00_check_env.py  01_prepare_coco.py  01_prepare_yolo_onnx.py  02_eval_fp32_onnx.py  03_eval_naive_int8_onnx.py  04_aimet_quantsim_ptq.py  05_aimet_cle_ptq.py  06_aimet_adaround_ptq.py  07_aimet_autoquant.py  08_benchmark_latency.py  09_quantization_coverage.py  10_activation_sensitivity.py  11_generate_report_figures.py  12_eval_ort_qoperator_int8.py  _bootstrap.py  run_native.sh  setup_native_uv.sh
aimet-yolo-ptq-study/src/aimet_yolo_study/: __init__.py  aimet_quantsim.py  aimet_utils.py  artifacts.py  benchmark.py  coco.py  config.py  downloads.py  hashes.py  images.py  metrics.py  ort_quant.py  qdq_sensitivity.py  quant_coverage.py  records.py  ultralytics_eval.py
