[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aimet-yolo-ptq-study"
version = "0.1.0"
description = "Native WSL2 AIMET ONNX PTQ study scaffold for YOLO models."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "aimet-onnx @ https://github.com/quic/aimet/releases/download/2.2.0/aimet_onnx-2.2.0+cu118-cp310-cp310-manylinux_2_34_x86_64.whl",
  "nvidia-cublas-cu11>=11.11,<12",
  "nvidia-cuda-runtime-cu11>=11.8,<12",
  "nvidia-cudnn-cu11>=8.7,<9",
  "nvidia-cufft-cu11>=10.9,<11",
  "nvidia-curand-cu11>=10.3,<11",
  "numpy<2",
  "onnx==1.16.*",
  "onnxruntime-gpu>=1.18,<1.19",
  "Pillow>=10.0.0",
  "pycocotools>=2.0.7",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "torch @ https://download.pytorch.org/whl/cu118/torch-2.1.2%2Bcu118-cp310-cp310-linux_x86_64.whl",
  "torchvision @ https://download.pytorch.org/whl/cu118/torchvision-0.16.2%2Bcu118-cp310-cp310-linux_x86_64.whl",
  "tqdm>=4.66.0",
  "ultralytics>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aimet_yolo_study"]

[tool.hatch.metadata]
allow-direct-references = true
